Fixed issue where wide roster pics could spill over

--- a/less/base.less
+++ b/less/base.less
@@ -171,9 +171,9 @@ ul {
         padding:5px;
         border-radius:3px;
       .pic {
-        //width:70%;
         height:150px;
         width:auto;
+        max-width:100%;
         display:block;
         margin:10px auto;
       }
